--- a/pgs/tb_freq.html
+++ b/pgs/tb_freq.html
@@ -42,6 +42,9 @@
 		.bord-b{
 			border-bottom: 1px solid black;
 		}
+		.bord-t{
+			border-top: 1px solid black;
+		}
 		.tb{
 			background-color: whitesmoke;
 			color: white;
@@ -50,6 +53,7 @@
 			margin-left: auto;
 			margin-right: auto;
 			margin-top: 20px;
+			margin-bottom: 60px;
 			overflow: hidden;
 			word-wrap: break-word;
 		}
@@ -78,9 +82,9 @@
 			x = val.trim().split(",");
 			cont = 0;
 			while(x.length>0){
-				//console.log("x");
+				//console.log(menor);
 				menor = Math.min.apply(null,x);
-				if(x[cont]==String(menor)){
+				if(x[cont]==(menor)){
 					y.push(x[cont]);
 					x.splice(cont,1);
 				}
@@ -125,18 +129,26 @@
 		function gerar(){
 			div = document.getElementById('msg');
 			val = document.getElementById('val').value;
-			console.log(val);
-		
+			//console.log(val);
+			
+			acumula = 0;
+			total = 0;
 			if(val!=""){
 				ordenado = ordem();
 				w = contar(ordenado);
+				for(let i=0; i<w.length; i++){
+					total += w[i].qtd;
+				}
+				console.log(total);
 				var string = "<table><tr><th class=\"bord-r\"></th><th class=\"bord-b\" colspan=\"4\">Frequência</th></tr><tr><th class=\"bord-r\">Valor</th><th class=\"bord-r\">Abs.</th><th class=\"bord-r\">Abs. acum.</th><th class=\"bord-r\">Rel.</th><th>Rel. acum.</th></tr>";
 				for(let i=0; i<w.length; i++){
-					string += "<tr><td class=\"bord-r\">"+w[i].num + "</td><td class=\"bord-r\">"+ w[i].qtd+"</td><td class=\"bord-r\"></td><td class=\"bord-r\"></td><td></td></tr>";
-				
+					acumula += w[i].qtd;
+					string += "<tr><td class=\"bord-r\">"+w[i].num + "</td><td class=\"bord-r\">"+ w[i].qtd+"</td><td class=\"bord-r\">"+acumula+"</td><td class=\"bord-r\">"+(w[i].qtd/total).toFixed(3)+"</td><td>"+(acumula/total).toFixed(3)+"</td></tr>";
 				}
+				string += "<tr><td class=\"bord-r bord-t\">Total</td><td class=\"bord-r bord-t\">"+acumula+"</td><td class=\"bord-r bord-t\">-</td><td class=\"bord-r bord-t\">"+(acumula/total)+"</td><td class=\"bord-t\">-</td></tr>";
 				string += "</table>";
 				div.innerHTML = string;
+			
 			}
 		}
 	</script>
@@ -147,7 +159,7 @@
 		<h2 class="item-centro">Valores:</h2>
 		<textarea id="val" class="item-centro" rows="5" cols="30"></textarea>
 		<div class="span">
-			<span>Insira os dados númericos, separados por vírgulas, lembrando que valores com ponto flutuante têm a casa decimal separada por ponto.</span>
+			<span>Insira os dados númericos, separados por vírgulas, lembrando que valores com ponto flutuante têm a casa decimal separada por ponto (padrão EUA).</span>
 		</div>
 		<button class="item-centro" onclick="gerar()">Processar</button>
 		<div id="msg" class="tb">
