Atualização de estilo e função de limpeza.

--- a/index.html
+++ b/index.html
@@ -8,29 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-	<style>
-		.img-icon{
-			width: 100px;
-			height: 100px;
-			margin: auto;
-		}
-		.jumbo{
-			text-shadow: 2px 2px 2px gray;
-			text-align: center;
-			margin-bottom: 1px;
-		}
-		.sha{
-			box-shadow: 0px 2px 8px gray;
-		}
-		.inat{
-			height: 35px;
-			width: 80px;
-			background-color: gray;
-			border-radius: 3px;
-			padding-top: 6px;
-			margin: auto;
-		}
-	</style>
+	<!-- Personal -->
+	<link rel="stylesheet" href="./css/estilo.css">
+
 
 
     <title>Statistic!</title>
