Alteração de estilo.

--- a/pgs/tb_freq.html
+++ b/pgs/tb_freq.html
@@ -19,14 +19,18 @@
 		<div class="row">
 			<h2 class="text-white item-centro mt-4">Valores:</h2>
 		</div>
-		<textarea id="val" class="item-centro" rows="5" cols="25" placeholder="1,2,3,3.5,4,1.2,2,1"></textarea>
+		<textarea id="val" class="item-centro" rows="5" cols="25" placeholder="Exemplo: 1,2,3,3.5,4,1.2,2,1"></textarea>
 		<div class="span mb-4 text-warning">
 			<span>Insira os dados númericos, separados por vírgulas, lembrando que valores com ponto flutuante têm a casa decimal separada por ponto ex. "1.5,2,1,3,4,2.6..."(padrão EUA).</span>
 		</div>
 		<div class="row item-centro">
 			<div class="item-centro button" onclick="gerar()">Processar</div>
 		</div>
-		<div id="msg" class="tb">
+		<div class="centro">
+			<div id="msg" class="tb disp">
+			</div>
+			<div id="msg2" class="tb disp">
+			</div>
 		</div>
 	</div>
 
