--- a/pgs/tb_freq.html
+++ b/pgs/tb_freq.html
@@ -15,7 +15,7 @@
 	<div class="jumbotron">
 		<h1 class="jumbo">Tabela frequência:</h1>
 	</div>
-	<div class="container bg-dark pb-3">
+	<div class="container bg-dark pb-3 mb-5">
 		<div class="row">
 			<h2 class="text-white item-centro mt-4">Valores:</h2>
 		</div>
